[project]
name = "hospital-ai-env"
version = "0.1.0"
description = "Hospital OpenEnv Hackathon"
authors = [
    { name = "Poovarasan" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.1.13"
]

[tool.openenv]
tasks = [
    { name = "easy", grader = "grader.py" },
    { name = "medium", grader = "grader.py" },
    { name = "hard", grader = "grader.py" }
]